--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "blackbird",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "proxy": "http://localhost:4000",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "start_server": "nodemon server/index.js"
+    "start_server": "nodemon server/index.mjs"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "cors": "^2.8.5",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "express": "^4.18.2",
@@ -20,8 +21,8 @@
     "next": "13.4.8",
     "nodemon": "^3.0.1",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
     "zustand": "^4.3.9"
   }
